[package]
name = "wordle"
version = "1.0.1"
edition = "2018"
readme = "README.md"
license = "MIT"
authors = ["cursorsdottsx"]
description = "Play the popular Wordle word game as a CLI."
repository = "https://github.com/kelsny/wordle"

[dependencies]
colored = "2"
rand = "0.8.5"
clearscreen = "2.0.0"

[patch.crates-io]
which = { git = "https://github.com/harryfei/which-rs" }
